Implement commentMessage and uncommentMessage
